drag and drop crash #30152

Closed
opened 2012-02-12 08:30:41 +01:00 by chris smith · 5 comments

%%%Blender Crashes using drag and drop

Drag and drop texture to blender on to the cube blender crashes also the viewport does not update with the texture when droped on to the cube.

operating system windows 7 64bit
memory 12 gigs
graphics ati 5970

Tested with official blender 2.61 from Blender.org and 2.62rc1.%%%

%%%Blender Crashes using drag and drop Drag and drop texture to blender on to the cube blender crashes also the viewport does not update with the texture when droped on to the cube. operating system windows 7 64bit memory 12 gigs graphics ati 5970 Tested with official blender 2.61 from Blender.org and 2.62rc1.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Will look into this issue.%%%

%%%Will look into this issue.%%%

%%%Crash fixed in svn rev44052. There some remained issues if 16bit textures are used but they shouldn't lead to crashes and Antony is already working on this issue.
And i think viewport isn't refreshing simply because you don't have UV map for cube on which dnd happens. You need to unwrap model before dropping texture on it to have immediate visual feedback. It's just how dnd works -- it assigns image to active UV map (if there's no UV maps, "empty" map is creating). Don't think it's indeed bug.
Can't see related things which might be fixed here, so thanks for the report, closing it now.%%%

%%%Crash fixed in svn rev44052. There some remained issues if 16bit textures are used but they shouldn't lead to crashes and Antony is already working on this issue. And i think viewport isn't refreshing simply because you don't have UV map for cube on which dnd happens. You need to unwrap model before dropping texture on it to have immediate visual feedback. It's just how dnd works -- it assigns image to active UV map (if there's no UV maps, "empty" map is creating). Don't think it's indeed bug. Can't see related things which might be fixed here, so thanks for the report, closing it now.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%thanks%%%

%%%thanks%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30152
No description provided.